Fix trending and announcements container flex direction and gap

--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,11 @@ body {
 
 li {
     display: flex;
-    gap: 1rem;
     justify-content: flex-start;
     align-items:  center;
+}
+.sidebar li {
+    gap: 1rem;
 }
 
 h1 {
@@ -42,7 +44,7 @@ h1 {
 .sidebar > section > ul{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
     font-size: clamp(1rem, 0.1rem + 2.7vh, 2rem);
 }
 
@@ -164,4 +166,14 @@ article>p {
     background-color: white;
     border-radius: 1rem;
     padding: 2rem;
+    font-size: clamp(0.5rem, 0.1rem + 1vw, 0.8rem);
+}
+
+.listContainer li{
+    flex-direction: column;
+    align-items:flex-start;
+}
+
+.listContainer h5 {
+    font-size: clamp(0.8rem, 0.3rem + 1vw, 1.1rem);
 }
